[package]
name = "tx-runner"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
config = "0.13.0"
lazy_static = "1.4"
eyre = "0.6.5"
serde = "1.0.152"
serde_json = "1.0.91"
rlp = "0.5.1"
rlp-derive = "0.1.0"